# gp40

./: .gitignore  README.md
Firmware/: GP40_U2.doc  GP40_U2.jed  GP40_U2.lgc  GP40_U40.jed  README.md
Firmware/U11_ROM/: build_rom.sh  make_clean.sh
Firmware/U2_PLD/: GP40U2.toml  GP40_U2.PLD  GP40_U2.abs  GP40_U2.lst  GP40_U2.mx  GP40_U2.pla  GP40_U2.si  GP40_U2.sim  GP40_U2.wo  README.txt  create-lgc-vectors.nb  make_lgc.sh
Firmware/U40_PLD/: GP40U40.lgc  GP40U40.toml  GP40_SD.wo  GP40_U40.abs  GP40_U40.doc  GP40_U40.lst  GP40_U40.pla  GP40_U40.pld  GP40_U40.si  GP40_U40.sim  GP40_U40.wo  create-lgc-vectors.nb  make_lgc.sh
Firmware/U5_CHRGEN/: make_clean.sh  test_diffs.sh
GP40_R1A/Gerber/: Drill_NPTH_Through.DRL  Gerber_BottomLayer.GBL  Gerber_BottomPasteMaskLayer.GBP  Gerber_BottomSilkscreenLayer.GBO  Gerber_DocumentLayer.GDL
GP40_R1C/: SCH_GP40_R1C.json
GP40_R1D/: BOM.csv  PCB_GP40_R1D.json  SCH_GP40_R1D.json
Keyboard/: PCB_GP40_keyboard.json  SCH_GP40_keyboard.json
LTspice_SD_interface/: SD_interface.asc  SD_interface.plt
LTspice_composite_video/: composite_video.asc  composite_video.plt  composite_video_LPF.asc  composite_video_LPF.plt  library.cir
PS2_KBD/: PCB_GP40_PS2_KBD.json  SCH_GP40_PS2_KBD.json
Pico_USB_HID/: BOM.csv  PCB_GP40_PICO_USB_HID.json  SCH_GP40_PICO_USB_HID.json
SDOS_V8C_GP40/: PVV_ReadMe.txt  asm_std.cmd  defs.inc  dos_JAce_RUNF.inc  dos_gal_RUNF.inc  dos_mx_RUNF.inc  dos_orion_RUNF.inc  dos_rk.asm  dos_rk.lst  dos_rk_RUNF.inc  dos_std_RUNF.inc  dos_trs_RUNF.inc  fs_proc.inc  ide_proc.inc  nemo_drv_new.asm  sd_proc.inc
Utilities/: fix_sch_svg
pico_firmware/: CMakeLists.txt  flash_pico  gp40_pico.elf  gp40_pico.uf2  main.cpp  restart-device  start-openocd  tusb_config.h
tapes/: README.md  wav2gtp.py
(+98 files in other folders)
